--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,4 +1,64 @@
-version: 2.1
+#version: 2.1
+#jobs:
+#  build-frontend:
+#    docker:
+#      - image: cimg/openjdk:11.0
+#    steps:
+#      - run: echo build frontend step
+#
+#  build-backend:
+#    docker:
+#      - image: cimg/openjdk:11.0
+#    steps:
+#      - run: echo build backend step
+#
+#  test-frontend:
+#    docker:
+#      - image: cimg/openjdk:11.0
+#    steps:
+#      - run: echo test frontend step
+#
+#  test-backend:
+#    docker:
+#      - image: cimg/openjdk:11.0
+#    steps:
+#      - run: echo test backend step
+#
+#  integration-test:
+#    docker:
+#      - image: cimg/openjdk:11.0
+#    steps:
+#      - run: echo integration test step
+#
+#  deploy:
+#    docker:
+#      - image: cimg/openjdk:11.0
+#    steps:
+#      - run: echo deploy step
+#
+#workflows:
+#  version: 2
+#  build-and-test:
+#    jobs:
+#      - build-frontend
+#      - build-backend
+#      - test-frontend
+#          requires:
+#            - build-frontend
+#      - test-backend
+#          requires:
+#            - build-backend
+#      - integration-test
+#          requires:
+#            - build-frontend
+#            - build-backend
+#      - deploy
+#          requires:
+#            - test-frontend
+#            - test-backend
+#            - integration-test
+
+version: 2
 jobs:
   build-frontend:
     docker:
@@ -42,17 +102,17 @@ workflows:
     jobs:
       - build-frontend
       - build-backend
-      - test-frontend
+      - test-frontend:
           requires:
             - build-frontend
-      - test-backend
+      - test-backend:
           requires:
             - build-backend
-      - integration-test
+      - integration-test:
           requires:
             - build-frontend
             - build-backend
-      - deploy
+      - deploy:
           requires:
             - test-frontend
             - test-backend
