--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,4 +1,4 @@
-#version: 2.1
+#version: 2
 #jobs:
 #  build-frontend:
 #    docker:
@@ -42,78 +42,64 @@
 #    jobs:
 #      - build-frontend
 #      - build-backend
-#      - test-frontend
+#      - test-frontend:
 #          requires:
 #            - build-frontend
-#      - test-backend
+#      - test-backend:
 #          requires:
 #            - build-backend
-#      - integration-test
+#      - integration-test:
 #          requires:
 #            - build-frontend
 #            - build-backend
-#      - deploy
+#      - deploy:
 #          requires:
 #            - test-frontend
 #            - test-backend
 #            - integration-test
 
-version: 2
+version: 2.1
 jobs:
-  build-frontend:
+  build:
     docker:
       - image: cimg/openjdk:11.0
+    working_directory: ~/repo
     steps:
-      - run: echo build frontend step
+      - run: echo build step
+      - run: mkdir build_output
+      - run: touch build_output/compiled_output.txt
+      - persist_to_workspace:
+          root: build-output
+          paths:
+            - *
 
-  build-backend:
+  test:
     docker:
       - image: cimg/openjdk:11.0
+    working_directory: ~/repo
     steps:
-      - run: echo build backend step
-
-  test-frontend:
-    docker:
-      - image: cimg/openjdk:11.0
-    steps:
-      - run: echo test frontend step
-
-  test-backend:
-    docker:
-      - image: cimg/openjdk:11.0
-    steps:
-      - run: echo test backend step
-
-  integration-test:
-    docker:
-      - image: cimg/openjdk:11.0
-    steps:
-      - run: echo integration test step
+      - run: echo test step
+      - attach_workspace:
+          at: ~/repo/workspace
+      - run: ls ~/repo/workspace/complied_output.txt
 
   deploy:
     docker:
       - image: cimg/openjdk:11.0
+    working_directory: ~/repo
     steps:
       - run: echo deploy step
-
+      - attach_workspace:
+          at: ~/repo/workspace
+      - run: ls ~/repo/workspace/compiled_output.txt
 workflows:
-  version: 2
-  build-and-test:
+  verion: 2
+  build-test-deploy:
     jobs:
-      - build-frontend
-      - build-backend
-      - test-frontend:
+      - build
+      - test:
           requires:
-            - build-frontend
-      - test-backend:
-          requires:
-            - build-backend
-      - integration-test:
-          requires:
-            - build-frontend
-            - build-backend
+            - build
       - deploy:
           requires:
-            - test-frontend
-            - test-backend
-            - integration-test
+            - test
