--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -93,7 +93,7 @@ jobs:
           at: ~/repo/workspace
       - run: ls ~/repo/workspace/compiled_output.txt
 workflows:
-  verion: 2
+  version: 2
   build-test-deploy:
     jobs:
       - build
