--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -63,7 +63,7 @@ jobs:
   build:
     docker:
       - image: cimg/openjdk:11.0
-    working_directory: ~/project
+    working_directory: ~/currency-conversion-service
     steps:
       - run: echo build step
       - run: mkdir build_output
@@ -76,22 +76,22 @@ jobs:
   test:
     docker:
       - image: cimg/openjdk:11.0
-    working_directory: ~/project
+    working_directory: ~/currency-conversion-service
     steps:
       - run: echo test step
       - attach_workspace:
-          at: ~/project/workspace
-      - run: ls ~/project/workspace/complied_output.txt
+          at: ~/currency-conversion-service/workspace
+      - run: ls ~/currency-conversion-service/workspace/complied_output.txt
 
   deploy:
     docker:
       - image: cimg/openjdk:11.0
-    working_directory: ~/project
+    working_directory: ~/currency-conversion-service
     steps:
       - run: echo deploy step
       - attach_workspace:
-          at: ~/project/workspace
-      - run: ls ~/project/workspace/compiled_output.txt
+          at: ~/currency-conversion-service/workspace
+      - run: ls ~/currency-conversion-service/workspace/compiled_output.txt
 workflows:
   version: 2
   build-test-deploy:
