--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -66,6 +66,7 @@ jobs:
     #working_directory: ~/currency-conversion-service
     steps:
       - run: echo build step
+      - run: echo pwd
       - run: mkdir build_output
       - run: touch build_output/compiled_output.txt
       - persist_to_workspace:
