artifacts in workspace fix 6

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -66,7 +66,7 @@ jobs:
     #working_directory: ~/currency-conversion-service
     steps:
       - run: echo build step
-      - run: mkdir build_output
+      - run: mkdir -p build_output
       - run: echo "$PWD" "$LS"
       - run: touch build_output/compiled_output.txt
       - persist_to_workspace:
